tests/NormalTests/paczka2/big_fuzzy/93630926.err
Error in line 10: 7tz A318 1,5
Error in line 9: uFD S414 81,6
Error in line 21: CQSKE S414 517,0
Error in line 35: 755CRmdERHn S770 51,3
Error in line 47: uFD A318 93,3
Error in line 55: S506 S770 46,6
Error in line 59: S506 S506 63,4
Error in line 62: CQSKE S414 7,4
Error in line 58: XPRlF6YYu A318 60,3
Error in line 65: uFD A318 11,0
Error in line 63: CQSKE S770 5,1
Error in line 71: uFD S414 91,2
Error in line 94: CQSKE S506 3,6
Error in line 97: CQSKE S770 4,1
Error in line 110: uFD S770 1,0
Error in line 115: uFD S506 33,8
Error in line 120: uFD S414 39,3
Error in line 111: 755CRmdERHn S414 3,1
Error in line 124: CQSKE S770 57,9
Error in line 141: XPRlF6YYu S770 90,1
Error in line 140: S506 S506 4,7
Error in line 146: XPRlF6YYu S770 34,3
Error in line 162: S506 A318 30,3
Error in line 150: 7tz S770 18,9
Error in line 195: S506 A318 93,7
Error in line 199: XPRlF6YYu Sy06 y4,8
Error in line 177: uFD S770 232,1
Error in line 208: XPRlF6YYu S770 51,2
Error in line 211: 755CRmdERHn S506 198,6
Error in line 217: uFD S506 37,6
Error in line 218: CQSKE S414 83,3
Error in line 221: 755CRmdERHn S770 38,8
Error in line 223: CQSKE S770 81,5
Error in line 222: uFD A318 92,0
